DAS-2214: Adds configuration for first sets of tests
Also adds first shapefile for Iceland

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -93,9 +93,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "723b8b8e-312c-4bdc-9620-3cbcb48183d7",
+   "metadata": {},
+   "source": [
+    "#### Import shared utility functions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4919504b-1f79-4073-ae79-9a23fb1f906f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[91mwhoopie\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "sys.path.append('../shared_utils')\n",
+    "from utilities import print_error  # noqa: E402"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b38863ea-7be5-4251-afa8-9669e973fc36",
+   "metadata": {},
+   "source": [
+    "### Set up test information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "273e24d4-9a7b-42bb-a3be-568b37969da2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "non_prod_configuration = {\n",
+    "    'subset_bounding_box': {\n",
+    "        'ATL03': {\n",
+    "            'collection_concept_id': 'C1256407609-NSIDC_CUAT',\n",
+    "            'granule_id': 'G1262402516-NSIDC_CUAT',\n",
+    "            'subset': 'subset=lat(40:40.005)&subset=lon(-105.5:-105)',\n",
+    "        },\n",
+    "        'ATL07': {\n",
+    "            'collection_concept_id': 'C1256535488-NSIDC_CUAT',\n",
+    "            'granule_id': 'G1261684946-NSIDC_CUAT',\n",
+    "            'subset': 'subset=lat(80:80.3)&subset=lon(-112:-93)',\n",
+    "        },\n",
+    "        'ATL08': {\n",
+    "            'collection_concept_id': 'C1256432189-NSIDC_CUAT',\n",
+    "            'granule_id': 'G1260745539-NSIDC_CUAT',\n",
+    "            'subset': 'subset=lat(40:40.25)&subset=lon(-105.5:-105)',\n",
+    "        },\n",
+    "    },\n",
+    "    'subset_by_temporal_range': {\n",
+    "        'ATL04': {\n",
+    "            'collection_concept_id': 'C1256535558-NSIDC_CUAT',\n",
+    "            'granule_id': 'G1256952662-NSIDC_CUAT',\n",
+    "            'subset': 'subset=time(\"2020-04-08T08:00:00.000Z\":\"2020-04-08T08:05:00.000Z\")',\n",
+    "        }\n",
+    "    },\n",
+    "    'subset_by_shapefile': {\n",
+    "        'ATL06': {\n",
+    "            'collection_concept_id': 'C1256358217-NSIDC_CUAT',\n",
+    "            'granule_id': 'G1260779121-NSIDC_CUAT',\n",
+    "            'shape': '-F \"shapefile=@Iceland_sliver.geojson;type=application/geo+json\"',\n",
+    "        },\n",
+    "    },\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8442b2b-b574-42f8-8600-699451918ddc",
+   "id": "3a3e4e07-7833-4d81-974e-c696c280cab9",
    "metadata": {},
    "outputs": [],
    "source": []
