DAS-2214: Adds tests for subset_bounding_box.
Updates the notebook for the first suite of tests.

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f08acc3f-6bc7-4a2e-a602-cc10ecb27677",
    "metadata": {
     "editable": true,
@@ -84,12 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c6c54643-4653-4368-9158-1deb8197f9c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from harmony import BBox, Client, Collection, Dimension, Environment, Request"
+    "from harmony import BBox, Client, Collection, Dimension, Environment, Request\n",
+    "from os.path import exists\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -102,23 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "4919504b-1f79-4073-ae79-9a23fb1f906f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[91mwhoopie\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "\n",
     "sys.path.append('../shared_utils')\n",
-    "from utilities import print_error  # noqa: E402"
+    "from utilities import (\n",
+    "    print_error,\n",
+    "    print_success,\n",
+    "    submit_and_download,\n",
+    "    compare_results_to_reference_file,\n",
+    ")  # noqa: E402"
    ]
   },
   {
@@ -131,86 +130,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "273e24d4-9a7b-42bb-a3be-568b37969da2",
+   "execution_count": null,
+   "id": "3c03b8f4-f0ab-4377-8042-4b6df65bbc19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "non_prod_configuration = {\n",
+    "non_production_configuration = {\n",
     "    'subset_bounding_box': {\n",
     "        'ATL03': {\n",
-    "            'collection_concept_id': 'C1256407609-NSIDC_CUAT',\n",
+    "            'collection_concept_id': Collection(id='C1256407609-NSIDC_CUAT'),\n",
     "            'granule_id': 'G1262402516-NSIDC_CUAT',\n",
-    "            'subset': 'subset=lat(40:40.005)&subset=lon(-105.5:-105)',\n",
+    "            'spatial': BBox(-105.5, 40.0, -105.0, 40.005),\n",
     "        },\n",
     "        'ATL07': {\n",
-    "            'collection_concept_id': 'C1256535488-NSIDC_CUAT',\n",
+    "            'collection_concept_id': Collection(id='C1256535488-NSIDC_CUAT'),\n",
     "            'granule_id': 'G1261684946-NSIDC_CUAT',\n",
-    "            'subset': 'subset=lat(80:80.3)&subset=lon(-112:-93)',\n",
+    "            'spatial': BBox(-112.0, 80.0, -93.0, 80.3),\n",
     "        },\n",
     "        'ATL08': {\n",
-    "            'collection_concept_id': 'C1256432189-NSIDC_CUAT',\n",
+    "            'collection_concept_id': Collection(id='C1256432189-NSIDC_CUAT'),\n",
     "            'granule_id': 'G1260745539-NSIDC_CUAT',\n",
-    "            'subset': 'subset=lat(40:40.25)&subset=lon(-105.5:-105)',\n",
+    "            'spatial': BBox(-105.5, 40.0, -105.0, 40.25),\n",
     "        },\n",
     "    },\n",
     "    'subset_by_temporal_range': {\n",
     "        'ATL04': {\n",
-    "            'collection_concept_id': 'C1256535558-NSIDC_CUAT',\n",
+    "            'collection_concept_id': Collection(id='C1256535558-NSIDC_CUAT'),\n",
     "            'granule_id': 'G1256952662-NSIDC_CUAT',\n",
     "            'subset': 'subset=time(\"2020-04-08T08:00:00.000Z\":\"2020-04-08T08:05:00.000Z\")',\n",
     "        }\n",
     "    },\n",
     "    'subset_by_shapefile': {\n",
     "        'ATL06': {\n",
-    "            'collection_concept_id': 'C1256358217-NSIDC_CUAT',\n",
+    "            'collection_concept_id': Collection(id='C1256358217-NSIDC_CUAT'),\n",
     "            'granule_id': 'G1260779121-NSIDC_CUAT',\n",
     "            'shape': '-F \"shapefile=@Iceland_sliver.geojson;type=application/geo+json\"',\n",
     "        },\n",
     "    },\n",
-    "}"
+    "}\n",
+    "\n",
+    "\n",
+    "environment_configuration = {\n",
+    "    'https://harmony.uat.earthdata.nasa.gov': {\n",
+    "        **non_production_configuration,\n",
+    "        'env': Environment.UAT,\n",
+    "    },\n",
+    "    'https://harmony.sit.earthdata.nasa.gov': {\n",
+    "        **non_production_configuration,\n",
+    "        'env': Environment.SIT,\n",
+    "    },\n",
+    "    'http://localhost:3000': {\n",
+    "        **non_production_configuration,\n",
+    "        'env': Environment.LOCAL,\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "configuration = environment_configuration.get(harmony_host_url)\n",
+    "\n",
+    "if configuration is not None:\n",
+    "    harmony_client = Client(env=configuration['env'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a3e4e07-7833-4d81-974e-c696c280cab9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ad80e63-5a78-47f8-a343-13c1d3d07d28",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7cd0d91e-bc75-4931-a43c-a6926d67275c",
+   "id": "57e82730-a033-4a4e-82ea-403a38d9670f",
    "metadata": {},
    "source": [
-    "description|short name|version|root url|collection concept ID|api|api version|collections/all/coverage/rangeset?maxResults=1|granuleId|subset||curl|output file||harmony request url|curl command\n",
-    "----|----|----|----|----|----|----|----|----|----|----|---|----|----|----|----|\n",
-    "subset by bounding box|ATL03|6|https://harmony.uat.earthdata.nasa.gov/|C1256407609-NSIDC_CUAT|/ogc-api-coverages/|1.0.0/|collections/all/coverage/rangeset?granuleId|G1262402516-NSIDC_CUAT|subset=lat(40%3A40.25)&subset=lon(-105.5%3A-105)||curl -Lnbj|-o atl03_spatial_test.h5||curl -Lnbj 'https://harmony.uat.earthdata.nasa.gov/C1256407609-NSIDC_CUAT/ogc-api-coverages/1.0.0/collections/all/coverage/rangeset?granuleId&G1262402516-NSIDC_CUAT&subset=lat(40%3A40.25)&subset=lon(-105.5%3A-105)' -o atl03_spatial_test.h5|\n",
-    "subset by temporal range|ATL04|6|https://harmony.uat.earthdata.nasa.gov/|C1256535558-NSIDC_CUAT|/ogc-api-coverages/|1.0.0/|collections/all/coverage/rangeset?granuleId|G1256952662-NSIDC_CUAT|subset=time(%222020-04-08T08%3A00%3A00.000Z%22%3A%222020-04-08T08%3A20%3A00.000Z%22)||curl -Lnbj|-o atl04_temporal_test.h5||curl -Lnbj 'https://harmony.uat.earthdata.nasa.gov/C1256535558-NSIDC_CUAT/ogc-api-coverages/1.0.0/collections/all/coverage/rangeset?granuleId&G1256952662-NSIDC_CUAT&subset=time(%222020-04-08T08%3A00%3A00.000Z%22%3A%222020-04-08T08%3A20%3A00.000Z%22)' -o atl04_temporal_test.h5|\n",
-    "subset by shapefile|ATL06|6|https://harmony.uat.earthdata.nasa.gov/|C1256358217-NSIDC_CUAT|/ogc-api-coverages/|1.0.0/|collections/all/coverage/rangeset?granuleId|G1260779121-NSIDC_CUAT|||curl -Ln -bj||shapefile=@iceland_simple.zip;type=application/shapefile+zip|curl -Ln -bj 'https://harmony.uat.earthdata.nasa.gov/C1256358217-NSIDC_CUAT/ogc-api-coverages/1.0.0/collections/all/coverage/rangeset?granuleId&G1260779121-NSIDC_CUAT&' |\n",
-    "subset by bounding box|ATL07|6|https://harmony.uat.earthdata.nasa.gov/|C1256535488-NSIDC_CUAT|/ogc-api-coverages/|1.0.0/|collections/all/coverage/rangeset?granuleId|G1261684946-NSIDC_CUAT|subset=lat(77%3A82.5)&subset=lon(-112%3A-93)||curl -Lnbj|-o atl07_spatial_test.h5||curl -Lnbj 'https://harmony.uat.earthdata.nasa.gov/C1256535488-NSIDC_CUAT/ogc-api-coverages/1.0.0/collections/all/coverage/rangeset?granuleId&G1261684946-NSIDC_CUAT&subset=lat(77%3A82.5)&subset=lon(-112%3A-93)' -o atl07_spatial_test.h5|\n",
-    "subset by bounding box|ATL08|6|https://harmony.uat.earthdata.nasa.gov/|C1256432189-NSIDC_CUAT|/ogc-api-coverages/|1.0.0/|collections/all/coverage/rangeset?granuleId|G1260745539-NSIDC_CUAT|subset=lat(40%3A40.25)&subset=lon(-105.5%3A-105)||curl -Lnbj|-o atl08_spatial_test.h5||curl -Lnbj 'https://harmony.uat.earthdata.nasa.gov/C1256432189-NSIDC_CUAT/ogc-api-coverages/1.0.0/collections/all/coverage/rangeset?granuleId&G1260745539-NSIDC_CUAT&subset=lat(40%3A40.25)&subset=lon(-105.5%3A-105)' -o atl08_spatial_test.h5|\n",
-    "subset by temporal range|ATL08|6|https://harmony.uat.earthdata.nasa.gov/|C1256432189-NSIDC_CUAT|/ogc-api-coverages/|1.0.0/|collections/all/coverage/rangeset?granuleId|G1261385533-NSIDC_CUAT|subset=time(%222022-07-31T23%3A01%3A00.000Z%22%3A%222022-07-31T23%3A01%3A30.000Z%22)||curl -Lnbj|-o atl08_temporal_test.h5||curl -Lnbj 'https://harmony.uat.earthdata.nasa.gov/C1256432189-NSIDC_CUAT/ogc-api-coverages/1.0.0/collections/all/coverage/rangeset?granuleId&G1261385533-NSIDC_CUAT&subset=time(%222022-07-31T23%3A01%3A00.000Z%22%3A%222022-07-31T23%3A01%3A30.000Z%22)' -o atl08_temporal_test.h5|\n",
-    "subset by shapefile|ATL09|6|https://harmony.uat.earthdata.nasa.gov/|C1256563776-NSIDC_CUAT|/ogc-api-coverages/|1.0.0/|collections/all/coverage/rangeset?granuleId|G1262106425-NSIDC_CUAT|||curl -Ln -bj||shapefile=@Tasmania_simple.geojson;type=application/geo+json|curl -Ln -bj 'https://harmony.uat.earthdata.nasa.gov/C1256563776-NSIDC_CUAT/ogc-api-coverages/1.0.0/collections/all/coverage/rangeset?granuleId&G1262106425-NSIDC_CUAT&' |\n",
-    "subset by shapefile|ATL10|6|https://harmony.uat.earthdata.nasa.gov/|C1256535487-NSIDC_CUAT|/ogc-api-coverages/|1.0.0/|collections/all/coverage/rangeset?granuleId||*this test failed because of anti-meridian crossing||curl -Ln -bj||||\n",
-    "subset by bounding box|ATL10|6|https://harmony.uat.earthdata.nasa.gov/|C1256535487-NSIDC_CUAT|/ogc-api-coverages/|1.0.0/|collections/all/coverage/rangeset?granuleId|G1261681735-NSIDC_CUAT|||curl -Ln -bj|-o atl10_spatial_test.h5|shapefile=@Ross_sea_positive_lon_only.geojson;type=application/geo+json|curl -Ln -bj 'https://harmony.uat.earthdata.nasa.gov/C1256535487-NSIDC_CUAT/ogc-api-coverages/1.0.0/collections/all/coverage/rangeset?granuleId&G1261681735-NSIDC_CUAT&' -o atl10_spatial_test.h5|\n",
-    "subset by bounding box|ATL12|6|https://harmony.uat.earthdata.nasa.gov/|C1256476536-NSIDC_CUAT|/ogc-api-coverages/|1.0.0/|collections/all/coverage/rangeset?granuleId|G1263137424-NSIDC_CUAT|subset=lat(27%3A34)&subset=lon(-79%3A-77)||curl -Ln -bj|-o atl12_spatial_test.h5||curl -Ln -bj 'https://harmony.uat.earthdata.nasa.gov/C1256476536-NSIDC_CUAT/ogc-api-coverages/1.0.0/collections/all/coverage/rangeset?granuleId&G1263137424-NSIDC_CUAT&subset=lat(27%3A34)&subset=lon(-79%3A-77)' -o atl12_spatial_test.h5|\n",
-    "subset by bounding box|ATL13|6|https://harmony.uat.earthdata.nasa.gov/|C1257810199-NSIDC_CUAT|/ogc-api-coverages/|1.0.0/|collections/all/coverage/rangeset?granuleId|G1261681705-NSIDC_CUAT|subset=lat(43%3A45)&subset=lon(-89%3A-75)||curl -Ln -bj|-o atl13_spatial_test.h5||curl -Ln -bj 'https://harmony.uat.earthdata.nasa.gov/C1257810199-NSIDC_CUAT/ogc-api-coverages/1.0.0/collections/all/coverage/rangeset?granuleId&G1261681705-NSIDC_CUAT&subset=lat(43%3A45)&subset=lon(-89%3A-75)' -o atl13_spatial_test.h5|"
+    "### Run Bounding Box Tests\n",
+    "\n",
+    "#### TODO write what this does\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aad47d4a-4d4a-484c-a4e2-517701c78ecf",
+   "id": "42269206-f773-45c0-83ac-4a5fea4668c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_name = 'subset_bounding_box'\n",
+    "if configuration is not None:\n",
+    "    for shortname, test_config in configuration[test_name].items():\n",
+    "        test_request = Request(\n",
+    "            collection=test_config['collection_concept_id'],\n",
+    "            granule_id=[test_config['granule_id']],\n",
+    "            spatial=test_config['spatial'],\n",
+    "        )\n",
+    "        test_output = Path(f'{shortname}_{test_name}.h5')\n",
+    "        test_reference = Path(\n",
+    "            f'reference_files/{test_output.stem}_reference{test_output.suffix}'\n",
+    "        )\n",
+    "\n",
+    "        url = harmony_client.request_as_url(test_request)\n",
+    "        print(f'testing URL: {url}')\n",
+    "\n",
+    "        submit_and_download(harmony_client, test_request, test_output)\n",
+    "\n",
+    "        assert exists(\n",
+    "            test_output\n",
+    "        ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
+    "        compare_results_to_reference_file(test_output, test_reference)\n",
+    "        print_success(f'{shortname} {test_name} test request.')\n",
+    "\n",
+    "    print_success(f'{test_name} test suite.')\n",
+    "else:\n",
+    "    print(\n",
+    "        f'Bounding box tests not configured for environment: {harmony_environment} - skipping tests'\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e74a617-2e76-4842-8586-1a528fa5857c",
    "metadata": {},
    "outputs": [],
    "source": []
