--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -91,6 +91,7 @@
    "source": [
     "from harmony import BBox, Client, Collection, Dimension, Environment, Request\n",
     "from os.path import exists\n",
+    "from datetime import datetime\n",
     "from pathlib import Path"
    ]
   },
@@ -116,7 +117,7 @@
     "    print_error,\n",
     "    print_success,\n",
     "    submit_and_download,\n",
-    "    compare_results_to_reference_file,\n",
+    "    compare_results_to_reference_file_new,\n",
     ")  # noqa: E402"
    ]
   },
@@ -131,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c03b8f4-f0ab-4377-8042-4b6df65bbc19",
+   "id": "5e40649a-20f8-4c8d-8b7f-9d0b81c7732f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +158,11 @@
     "        'ATL04': {\n",
     "            'collection_concept_id': Collection(id='C1256535558-NSIDC_CUAT'),\n",
     "            'granule_id': 'G1256952662-NSIDC_CUAT',\n",
-    "            'subset': 'subset=time(\"2020-04-08T08:00:00.000Z\":\"2020-04-08T08:05:00.000Z\")',\n",
+    "            'temporal': {\n",
+    "                'start': datetime.fromisoformat(\"2020-04-08T08:00:00.000Z\"),\n",
+    "                'stop': datetime.fromisoformat(\"2020-04-08T08:05:00.000Z\"),\n",
+    "            },\n",
+    "            'coords_to_rename': ['delta_time'],\n",
     "        }\n",
     "    },\n",
     "    'subset_by_shapefile': {\n",
@@ -230,7 +235,63 @@
     "        assert exists(\n",
     "            test_output\n",
     "        ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
-    "        compare_results_to_reference_file(test_output, test_reference)\n",
+    "        compare_results_to_reference_file_new(test_output, test_reference)\n",
+    "        print_success(f'{shortname} {test_name} test request.')\n",
+    "\n",
+    "    print_success(f'{test_name} test suite.')\n",
+    "else:\n",
+    "    print(\n",
+    "        f'Bounding box tests not configured for environment: {harmony_environment} - skipping tests'\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0f860c5-9c4e-4b83-920b-02353c8f5114",
+   "metadata": {},
+   "source": [
+    "## Run Temporal Range Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abdd4887-b242-4582-a296-b58315d0d444",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20ab50f4-c142-4733-858e-b4fba1053386",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_name = 'subset_by_temporal_range'\n",
+    "if configuration is not None:\n",
+    "    for shortname, test_config in configuration[test_name].items():\n",
+    "        test_request = Request(\n",
+    "            collection=test_config['collection_concept_id'],\n",
+    "            granule_id=[test_config['granule_id']],\n",
+    "            temporal=test_config['temporal'],\n",
+    "        )\n",
+    "        test_output = Path(f'{shortname}_{test_name}.h5')\n",
+    "        test_reference = Path(\n",
+    "            f'reference_files/{test_output.stem}_reference{test_output.suffix}'\n",
+    "        )\n",
+    "\n",
+    "        url = harmony_client.request_as_url(test_request)\n",
+    "        print(f'testing URL: {url}')\n",
+    "\n",
+    "        submit_and_download(harmony_client, test_request, test_output)\n",
+    "\n",
+    "        assert exists(\n",
+    "            test_output\n",
+    "        ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
+    "        compare_results_to_reference_file_new(\n",
+    "            test_output, test_reference, test_config['coords_to_rename']\n",
+    "        )\n",
     "        print_success(f'{shortname} {test_name} test request.')\n",
     "\n",
     "    print_success(f'{test_name} test suite.')\n",
@@ -243,7 +304,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e74a617-2e76-4842-8586-1a528fa5857c",
+   "id": "c4327bc5-4864-4444-a125-3aa0e76bb256",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c60d37d9-2a18-49db-8c88-c022f70bdab7",
    "metadata": {},
    "outputs": [],
    "source": []
