DAS-2214: Adds Iceland Shapefile test.

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -169,7 +169,7 @@
     "        'ATL06': {\n",
     "            'collection_concept_id': Collection(id='C1256358217-NSIDC_CUAT'),\n",
     "            'granule_id': 'G1260779121-NSIDC_CUAT',\n",
-    "            'shape': '-F \"shapefile=@Iceland_sliver.geojson;type=application/geo+json\"',\n",
+    "            'shape': 'ancillary/Iceland_sliver.geojson',\n",
     "        },\n",
     "    },\n",
     "}\n",
@@ -302,9 +302,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "905f5f9e-2fca-456d-ae37-7ac49f6296ce",
+   "metadata": {},
+   "source": [
+    "## Run Subset by Shapefile Tests"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4327bc5-4864-4444-a125-3aa0e76bb256",
+   "id": "c60d37d9-2a18-49db-8c88-c022f70bdab7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -312,7 +320,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c60d37d9-2a18-49db-8c88-c022f70bdab7",
+   "id": "e91d4136-74c4-4bbc-8217-44a27296d196",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_name = 'subset_by_shapefile'\n",
+    "if configuration is not None:\n",
+    "    for shortname, test_config in configuration[test_name].items():\n",
+    "        test_request = Request(\n",
+    "            collection=test_config['collection_concept_id'],\n",
+    "            granule_id=[test_config['granule_id']],\n",
+    "            shape=test_config['shape'],\n",
+    "        )\n",
+    "        test_output = Path(f'{shortname}_{test_name}.h5')\n",
+    "        test_reference = Path(\n",
+    "            f'reference_files/{test_output.stem}_reference{test_output.suffix}'\n",
+    "        )\n",
+    "        print(test_reference)\n",
+    "\n",
+    "        submit_and_download(harmony_client, test_request, test_output)\n",
+    "\n",
+    "        assert exists(\n",
+    "            test_output\n",
+    "        ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
+    "        compare_results_to_reference_file_new(test_output, test_reference, [])\n",
+    "        print_success(f'{shortname} {test_name} test request.')\n",
+    "\n",
+    "    print_success(f'{test_name} test suite.')\n",
+    "else:\n",
+    "    print(\n",
+    "        f'Bounding box tests not configured for environment: {harmony_environment} - skipping tests'\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf49d848-f90e-46e5-b13f-5f7d1eaf9e1c",
    "metadata": {},
    "outputs": [],
    "source": []
