--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e40649a-20f8-4c8d-8b7f-9d0b81c7732f",
+   "id": "775d7a3c-8364-4cb6-a1de-7265e4ecc84a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,6 +153,16 @@
     "            'granule_id': 'G1260745539-NSIDC_CUAT',\n",
     "            'spatial': BBox(-105.5, 40.0, -105.0, 40.25),\n",
     "        },\n",
+    "        'ATL10': {\n",
+    "            'collection_concept_id': Collection(id='C1256535487-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1261681735-NSIDC_CUAT',\n",
+    "            'spatial': BBox(161.0, -75.0, 171.0, -74.0),\n",
+    "        },\n",
+    "        'ATL12': {\n",
+    "            'collection_concept_id': Collection(id='C1256476536-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1263137424-NSIDC_CUAT',\n",
+    "            'spatial': BBox(-79.0, 27.0, -77.0, 34.0),\n",
+    "        },\n",
     "    },\n",
     "    'subset_by_temporal_range': {\n",
     "        'ATL04': {\n",
@@ -163,7 +173,16 @@
     "                'stop': datetime.fromisoformat(\"2020-04-08T08:05:00.000Z\"),\n",
     "            },\n",
     "            'coords_to_rename': ['delta_time'],\n",
-    "        }\n",
+    "        },\n",
+    "        # 'ATL08': {\n",
+    "        #     'collection_concept_id': Collection(id='C1256432189-NSIDC_CUAT'),\n",
+    "        #     'granule_id': 'G1261385533-NSIDC_CUAT',\n",
+    "        #     'temporal': {\n",
+    "        #         'start': datetime.fromisoformat(\"2022-07-31T23:01:00.000Z\"),\n",
+    "        #         'stop': datetime.fromisoformat(\"2022-07-31T23:01:10.000Z\"),\n",
+    "        #     },\n",
+    "        #     'coords_to_rename': [],\n",
+    "        # },\n",
     "    },\n",
     "    'subset_by_shapefile': {\n",
     "        'ATL06': {\n",
