DAS-2214: Adds ATL13 BBox test

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "775d7a3c-8364-4cb6-a1de-7265e4ecc84a",
+   "id": "0a3782ce-2879-4a8f-9813-dc871b6e88ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,6 +162,11 @@
     "            'collection_concept_id': Collection(id='C1256476536-NSIDC_CUAT'),\n",
     "            'granule_id': 'G1263137424-NSIDC_CUAT',\n",
     "            'spatial': BBox(-79.0, 27.0, -77.0, 34.0),\n",
+    "        },\n",
+    "        'ATL13': {\n",
+    "            'collection_concept_id': Collection(id='C1257810199-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1261681705-NSIDC_CUAT',\n",
+    "            'spatial': BBox(-89.0, 43.0, -75.0, 45.0),\n",
     "        },\n",
     "    },\n",
     "    'subset_by_temporal_range': {\n",
