DAS-2214: Adds ATL09 ATL10 shapefile tests

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a3782ce-2879-4a8f-9813-dc871b6e88ff",
+   "id": "72854a33-9320-442b-b70f-4da6fb1b1c32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,6 +195,16 @@
     "            'granule_id': 'G1260779121-NSIDC_CUAT',\n",
     "            'shape': 'ancillary/Iceland_sliver.geojson',\n",
     "        },\n",
+    "        'ATL09': {\n",
+    "            'collection_concept_id': Collection(id='C1256563776-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1262106425-NSIDC_CUAT',\n",
+    "            'shape': 'ancillary/Tasmania_sliver.geojson',\n",
+    "        },\n",
+    "        'ATL10': {\n",
+    "            'collection_concept_id': Collection(id='C1256535487-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1261681735-NSIDC_CUAT',\n",
+    "            'shape': 'ancillary/Ross_Sea_positive_lon_only.geojson',\n",
+    "        },\n",
     "    },\n",
     "}\n",
     "\n",
@@ -251,9 +261,6 @@
     "            f'reference_files/{test_output.stem}_reference{test_output.suffix}'\n",
     "        )\n",
     "\n",
-    "        url = harmony_client.request_as_url(test_request)\n",
-    "        print(f'testing URL: {url}')\n",
-    "\n",
     "        submit_and_download(harmony_client, test_request, test_output)\n",
     "\n",
     "        assert exists(\n",
@@ -304,9 +311,6 @@
     "        test_reference = Path(\n",
     "            f'reference_files/{test_output.stem}_reference{test_output.suffix}'\n",
     "        )\n",
-    "\n",
-    "        url = harmony_client.request_as_url(test_request)\n",
-    "        print(f'testing URL: {url}')\n",
     "\n",
     "        submit_and_download(harmony_client, test_request, test_output)\n",
     "\n",
@@ -360,7 +364,6 @@
     "        test_reference = Path(\n",
     "            f'reference_files/{test_output.stem}_reference{test_output.suffix}'\n",
     "        )\n",
-    "        print(test_reference)\n",
     "\n",
     "        submit_and_download(harmony_client, test_request, test_output)\n",
     "\n",
