--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72854a33-9320-442b-b70f-4da6fb1b1c32",
+   "id": "69201556-bd6d-4b98-92d6-2c2ea9892f0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,6 +194,11 @@
     "            'collection_concept_id': Collection(id='C1256358217-NSIDC_CUAT'),\n",
     "            'granule_id': 'G1260779121-NSIDC_CUAT',\n",
     "            'shape': 'ancillary/Iceland_sliver.geojson',\n",
+    "        },\n",
+    "        'ATL08': {\n",
+    "            'collection_concept_id': Collection(id='C1256432189-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1260498664-NSIDC_CUAT',\n",
+    "            'shape': 'ancillary/SriLanka_simple.kml',\n",
     "        },\n",
     "        'ATL09': {\n",
     "            'collection_concept_id': Collection(id='C1256563776-NSIDC_CUAT'),\n",
