DAS-2214: Updates ATL06 test to use zip shapefile

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69201556-bd6d-4b98-92d6-2c2ea9892f0f",
+   "id": "cc20331c-0f04-4d38-8a38-96431fde6088",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
     "        'ATL06': {\n",
     "            'collection_concept_id': Collection(id='C1256358217-NSIDC_CUAT'),\n",
     "            'granule_id': 'G1260779121-NSIDC_CUAT',\n",
-    "            'shape': 'ancillary/Iceland_sliver.geojson',\n",
+    "            'shape': 'ancillary/Iceland_sliver.zip',\n",
     "        },\n",
     "        'ATL08': {\n",
     "            'collection_concept_id': Collection(id='C1256432189-NSIDC_CUAT'),\n",
