DAS-2214: Add note about Trajectory Subsetter bug blocker

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -179,6 +179,7 @@
     "            },\n",
     "            'coords_to_rename': ['delta_time'],\n",
     "        },\n",
+    "        # BLOCKED by https://bugs.earthdata.nasa.gov/browse/DAS-2233\n",
     "        # 'ATL08': {\n",
     "        #     'collection_concept_id': Collection(id='C1256432189-NSIDC_CUAT'),\n",
     "        #     'granule_id': 'G1261385533-NSIDC_CUAT',\n",
