DAS-2214: Use Temporary Directory for cleanup

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -92,7 +92,8 @@
     "from harmony import BBox, Client, Collection, Dimension, Environment, Request\n",
     "from os.path import exists\n",
     "from datetime import datetime\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "from tempfile import TemporaryDirectory"
    ]
   },
   {
@@ -250,36 +251,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42269206-f773-45c0-83ac-4a5fea4668c4",
+   "id": "e745045b-10fc-4e6c-808c-3bdaf2725d03",
    "metadata": {},
    "outputs": [],
    "source": [
     "test_name = 'subset_bounding_box'\n",
-    "if configuration is not None:\n",
-    "    for shortname, test_config in configuration[test_name].items():\n",
-    "        test_request = Request(\n",
-    "            collection=test_config['collection_concept_id'],\n",
-    "            granule_id=[test_config['granule_id']],\n",
-    "            spatial=test_config['spatial'],\n",
-    "        )\n",
-    "        test_output = Path(f'{shortname}_{test_name}.h5')\n",
-    "        test_reference = Path(\n",
-    "            f'reference_files/{test_output.stem}_reference{test_output.suffix}'\n",
-    "        )\n",
+    "with TemporaryDirectory() as tmp_dir:\n",
+    "    if configuration is not None:\n",
+    "        for shortname, test_config in configuration[test_name].items():\n",
+    "            test_request = Request(\n",
+    "                collection=test_config['collection_concept_id'],\n",
+    "                granule_id=[test_config['granule_id']],\n",
+    "                spatial=test_config['spatial'],\n",
+    "            )\n",
+    "            test_output = tmp_dir / Path(f'{shortname}_{test_name}.h5')\n",
+    "            test_reference = Path(\n",
+    "                f'reference_files/{test_output.stem}_reference{test_output.suffix}'\n",
+    "            )\n",
     "\n",
-    "        submit_and_download(harmony_client, test_request, test_output)\n",
+    "            submit_and_download(harmony_client, test_request, test_output)\n",
     "\n",
-    "        assert exists(\n",
-    "            test_output\n",
-    "        ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
-    "        compare_results_to_reference_file_new(test_output, test_reference)\n",
-    "        print_success(f'{shortname} {test_name} test request.')\n",
+    "            assert exists(\n",
+    "                test_output\n",
+    "            ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
+    "            compare_results_to_reference_file_new(test_output, test_reference)\n",
+    "            print_success(f'{shortname} {test_name} test request.')\n",
     "\n",
-    "    print_success(f'{test_name} test suite.')\n",
-    "else:\n",
-    "    print(\n",
-    "        f'Bounding box tests not configured for environment: {harmony_environment} - skipping tests'\n",
-    "    )"
+    "        print_success(f'{test_name} test suite.')\n",
+    "    else:\n",
+    "        print(\n",
+    "            f'Bounding box tests not configured for environment: {harmony_environment} - skipping tests'\n",
+    "        )"
    ]
   },
   {
@@ -306,33 +308,34 @@
    "outputs": [],
    "source": [
     "test_name = 'subset_by_temporal_range'\n",
-    "if configuration is not None:\n",
-    "    for shortname, test_config in configuration[test_name].items():\n",
-    "        test_request = Request(\n",
-    "            collection=test_config['collection_concept_id'],\n",
-    "            granule_id=[test_config['granule_id']],\n",
-    "            temporal=test_config['temporal'],\n",
-    "        )\n",
-    "        test_output = Path(f'{shortname}_{test_name}.h5')\n",
-    "        test_reference = Path(\n",
-    "            f'reference_files/{test_output.stem}_reference{test_output.suffix}'\n",
-    "        )\n",
+    "with TemporaryDirectory() as tmp_dir:\n",
+    "    if configuration is not None:\n",
+    "        for shortname, test_config in configuration[test_name].items():\n",
+    "            test_request = Request(\n",
+    "                collection=test_config['collection_concept_id'],\n",
+    "                granule_id=[test_config['granule_id']],\n",
+    "                temporal=test_config['temporal'],\n",
+    "            )\n",
+    "            test_output = tmp_dir / Path(f'{shortname}_{test_name}.h5')\n",
+    "            test_reference = Path(\n",
+    "                f'reference_files/{test_output.stem}_reference{test_output.suffix}'\n",
+    "            )\n",
     "\n",
-    "        submit_and_download(harmony_client, test_request, test_output)\n",
+    "            submit_and_download(harmony_client, test_request, test_output)\n",
     "\n",
-    "        assert exists(\n",
-    "            test_output\n",
-    "        ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
-    "        compare_results_to_reference_file_new(\n",
-    "            test_output, test_reference, test_config['coords_to_rename']\n",
-    "        )\n",
-    "        print_success(f'{shortname} {test_name} test request.')\n",
+    "            assert exists(\n",
+    "                test_output\n",
+    "            ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
+    "            compare_results_to_reference_file_new(\n",
+    "                test_output, test_reference, test_config['coords_to_rename']\n",
+    "            )\n",
+    "            print_success(f'{shortname} {test_name} test request.')\n",
     "\n",
-    "    print_success(f'{test_name} test suite.')\n",
-    "else:\n",
-    "    print(\n",
-    "        f'Bounding box tests not configured for environment: {harmony_environment} - skipping tests'\n",
-    "    )"
+    "        print_success(f'{test_name} test suite.')\n",
+    "    else:\n",
+    "        print(\n",
+    "            f'Bounding box tests not configured for environment: {harmony_environment} - skipping tests'\n",
+    "        )"
    ]
   },
   {
@@ -359,31 +362,32 @@
    "outputs": [],
    "source": [
     "test_name = 'subset_by_shapefile'\n",
-    "if configuration is not None:\n",
-    "    for shortname, test_config in configuration[test_name].items():\n",
-    "        test_request = Request(\n",
-    "            collection=test_config['collection_concept_id'],\n",
-    "            granule_id=[test_config['granule_id']],\n",
-    "            shape=test_config['shape'],\n",
-    "        )\n",
-    "        test_output = Path(f'{shortname}_{test_name}.h5')\n",
-    "        test_reference = Path(\n",
-    "            f'reference_files/{test_output.stem}_reference{test_output.suffix}'\n",
-    "        )\n",
+    "with TemporaryDirectory() as tmp_dir:\n",
+    "    if configuration is not None:\n",
+    "        for shortname, test_config in configuration[test_name].items():\n",
+    "            test_request = Request(\n",
+    "                collection=test_config['collection_concept_id'],\n",
+    "                granule_id=[test_config['granule_id']],\n",
+    "                shape=test_config['shape'],\n",
+    "            )\n",
+    "            test_output = tmp_dir / Path(f'{shortname}_{test_name}.h5')\n",
+    "            test_reference = Path(\n",
+    "                f'reference_files/{test_output.stem}_reference{test_output.suffix}'\n",
+    "            )\n",
     "\n",
-    "        submit_and_download(harmony_client, test_request, test_output)\n",
+    "            submit_and_download(harmony_client, test_request, test_output)\n",
     "\n",
-    "        assert exists(\n",
-    "            test_output\n",
-    "        ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
-    "        compare_results_to_reference_file_new(test_output, test_reference, [])\n",
-    "        print_success(f'{shortname} {test_name} test request.')\n",
+    "            assert exists(\n",
+    "                test_output\n",
+    "            ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
+    "            compare_results_to_reference_file_new(test_output, test_reference, [])\n",
+    "            print_success(f'{shortname} {test_name} test request.')\n",
     "\n",
-    "    print_success(f'{test_name} test suite.')\n",
-    "else:\n",
-    "    print(\n",
-    "        f'Bounding box tests not configured for environment: {harmony_environment} - skipping tests'\n",
-    "    )"
+    "        print_success(f'{test_name} test suite.')\n",
+    "    else:\n",
+    "        print(\n",
+    "            f'Bounding box tests not configured for environment: {harmony_environment} - skipping tests'\n",
+    "        )"
    ]
   },
   {
