DAS-2214: Clean up comments for NSIDC regression test notebook.

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b651bd85-cab3-4efa-a1b2-a1442512e8d4",
+   "id": "b26a933e-65ac-4a7a-b298-855c0b845ff1",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -30,14 +30,19 @@
     "\n",
     "## Prerequisites\n",
     "\n",
-    "The dependencies for this notebook are listed in the\n",
-    "[environment.yaml](https://github.com/nasa/harmony-regression-tests/blob/main/test/nsidc-icesat2/environment.yaml). To test locally, create the conda environment used in the automated regression testing suite:\n",
+    "The dependencies for running this notebook are listed in the\n",
+    "[environment.yaml](https://github.com/nasa/harmony-regression-tests/blob/main/test/nsidc-icesat2/environment.yaml).\n",
+    "\n",
+    "In order to test locally, run the following commands from the `test/nsidc-icesat2/` directory to create and activate the conda environment necessary to run the regression testing notebook.\n",
     "\n",
     "```sh\n",
     "conda env create -f ./environment.yaml && conda activate papermill-nsidc-icesat2\n",
     "```\n",
     "\n",
-    "A `.netrc` file must also be located in the `test` directory of this repository. Additionally the credentials in this .netrc should belong to a user that can access the NSIDC data which may be protected by ACLs in UAT and SIT.\n",
+    "## Authentication\n",
+    "\n",
+    "To provide your credentials to harmony, a `.netrc` file must be located in the `test` directory of this repository.\n",
+    "Ensure the credentials in this .netrc belong to a user that can access the NSIDC data which is protected by ACLs in UAT and SIT.\n",
     "\n",
     "\n",
     "## Set the Harmony environment:\n",
@@ -239,13 +244,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57e82730-a033-4a4e-82ea-403a38d9670f",
+   "id": "b115ba16-0d31-43b0-9f57-6a7061b7eeda",
    "metadata": {},
    "source": [
-    "### Run Bounding Box Tests\n",
-    "\n",
-    "#### TODO write what this does\n",
-    "\n"
+    "### Run Bounding Box Tests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0788c88-6aee-450a-be35-087ba36a1d80",
+   "metadata": {},
+   "source": [
+    "The next cell runs through each of the subset by bounding box tests forming requests that are submitted to Harmony and comparing the downloaded results against reference data files that have been verified.  This ensures that Harmony continues to return the expected binary files for expected requests."
    ]
   },
   {
@@ -293,12 +303,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abdd4887-b242-4582-a296-b58315d0d444",
+   "cell_type": "markdown",
+   "id": "edd687f2-d3cd-4dc0-8eed-6f205b6f1ab4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "As with the previous cell, The next cell runs through each of the temporal range tests forming requests that are submitted to Harmony and comparing the downloaded results against reference data files that have been verified.  This ensures that Harmony continues to return the expected binary files for expected requests."
+   ]
   },
   {
    "cell_type": "code",
@@ -347,12 +357,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c60d37d9-2a18-49db-8c88-c022f70bdab7",
+   "cell_type": "markdown",
+   "id": "b434c1ab-0e5a-40fb-b94a-60ad721c3c5e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "This next cell runs through each of the subset by shapefile tests forming requests that are submitted to Harmony and comparing the downloaded results against reference data files that have been verified.  This ensures that Harmony continues to return the expected binary files for expected requests."
+   ]
   },
   {
    "cell_type": "code",
