updates after review

--- a/test/net2cog/net2cog_Regression.ipynb
+++ b/test/net2cog/net2cog_Regression.ipynb
@@ -38,7 +38,7 @@
    },
    "outputs": [],
    "source": [
-    "harmony_host_url = 'http://localhost:3000'"
+    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
    ]
   },
   {
@@ -134,9 +134,7 @@
     "environment_information = collection_data.get(harmony_host_url)\n",
     "\n",
     "if environment_information is not None:\n",
-    "    harmony_client = Client(\n",
-    "        env=environment_information['env'], auth=('greguska', 'r3gul@t0R!')\n",
-    "    )\n",
+    "    harmony_client = Client(env=environment_information['env'])\n",
     "    endpoint_url = environment_information.get('endpoint_url', None)"
    ]
   },
@@ -252,7 +250,8 @@
     "\n",
     "    assert (\n",
     "        raised_expected_error\n",
-    "    ), 'Expected request to raise an exception but it did not.'"
+    "    ), 'Expected request to raise an exception but it did not.'\n",
+    "    utility.print_success('All variables raised expected error')"
    ]
   },
   {
