--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -39,6 +39,7 @@
     "conda env create -f ./environment.yaml && conda activate papermill-nsidc-icesat2\n",
     "```\n",
     "\n",
+"To use this environment within a shared Jupyter Hub, see [instructions](https://nasa-openscapes.github.io/earthdata-cloud-cookbook/contributing/workflow.html#create-a-jupyter-kernel-to-run-notebooks) in the NASA Earthdata Cloud Cookbook for how to create a new kernel based on this environment. 
     "## Authentication\n",
     "\n",
     "To provide your credentials to harmony, a `.netrc` file must be located in the `test` directory of this repository.\n",
